# AwesomeGit

./: .gitignore  CRATES-IO.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/cli/: config.rs  mod.rs
